--- a/.github/workflows/cont_ml.yaml
+++ b/.github/workflows/cont_ml.yaml
@@ -13,4 +13,7 @@ jobs:
           # Your ML workflow goes here
           pip install -r requirements.txt
           python train_model.py
-          cat "metrics.txt"
+          echo "Model Metrics"
+          cat "metrics.txt" >> report.md
+          cml-send-comment report.md
+
