--- a/.github/workflows/cont_ml.yaml
+++ b/.github/workflows/cont_ml.yaml
@@ -15,5 +15,7 @@ jobs:
           python train_model.py
           echo "Model Metrics"
           cat "metrics.txt" >> report.md
+
+          cml-publish feature_importance_rf>>report.md
           cml-send-comment report.md
 
