--- a/.github/workflows/cont_ml.yaml
+++ b/.github/workflows/cont_ml.yaml
@@ -16,6 +16,6 @@ jobs:
           echo "Model Metrics"
           cat "metrics.txt" >> report.md
 
-          cml-publish feature_importance_rf>>report.md
+          cml-publish feature_importance_rf.png>>report.md
           cml-send-comment report.md
 
